# nerf-sampling

./: .gitignore  README.md  debug.py  env_setup.sh  environment.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
experiments/configs/: alphas.py  alphas_with_regions.py  lego.yaml  lego_base.yaml  normalized.yaml
experiments/scripts/: 5_samples.py  alphas_v2.py  regions.py  run_sampled_sphere_nerf.py  run_sampler_nerf.py  run_sphere_nerf.py  summing.py
nerf_pytorch/: nerf_utils.py  run_nerf.py  utils.py
nerf_pytorch/trainers/: Blender.py  LLF.py  Trainer.py  deepvoxels.py
nerf_sampling/depth_nets/: depth_net.py  utils.py
nerf_sampling/experiments/: plot.py  render.py  render_run.py  run.py  study.py
nerf_sampling/nerf_pytorch/: load_LINEMOD.py  load_blender.py  load_llff.py  loss_functions.py  nerf_utils.py  run_nerf_helpers.py  utils.py  view_saved_plots.py  visualize.py
nerf_sampling/samplers/: baseline_sampler.py  utils.py
nerf_sampling/tests/: depth_network_test_mse.py  sampling_network_test.py  sampling_network_test_mse.py  single_image_test.py  test_log_likelihood.py  test_sampling_network.py  test_visualize.py  tests.py  visualize_test.py
nerf_sampling/trainers/: __init__.py  sampling_trainer.py
output/metrics/: Baseline.json  Baseline_nan_0.json  Baseline_nan_0_sum.json  Baseline_nan_0_sum_1000.json  Baseline_nan_0_sum_1000_lr_005.json  Baseline_nan_0_sum_1000_lr_01_64_spheres.json  Baseline_nan_to_0_sum_1000_lr_01_64_spheres.json  (+2 more)
sphere_nerf_mod/: line.py  lines.py  main.py  sphere.py  spheres.py  utils.py
(+45 files in other folders)
